--- a/UI/Views/Idioma/Traduccion.cshtml
+++ b/UI/Views/Idioma/Traduccion.cshtml
@@ -34,7 +34,7 @@
 
 
 
-        <table class="table table-hover">
+        <table class="table" style="max-width:900px;">
             <thead>
                 <tr>
                     <th>
@@ -49,7 +49,7 @@
 
             </thead>
 
-            </tr>
+       
 
             @foreach (var item in Model)
             {
