--- a/UI/Views/Idioma/Edit.cshtml
+++ b/UI/Views/Idioma/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Editar Idioma</h1>
+        <h1 class="h2">Editar Idioma @Html.DisplayFor(model => model.Descripcion)</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
                 <a>@Html.ActionLink("Volver", "Index", "Idioma", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
@@ -26,8 +26,16 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
 
-
-
+            <fieldset disabled>
+                <div class="form-group col-sm-4">
+                    @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </fieldset>
+            <br />
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -37,15 +45,38 @@
                 </div>
             </div>
             <br />
-            <div class="form-group">
-                @Html.LabelFor(model => model.PorDefecto, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.PorDefecto)
-                        @Html.ValidationMessageFor(model => model.PorDefecto, "", new { @class = "text-danger" })
+
+            @if (Model.PorDefecto == true)
+            {
+                <fieldset disabled>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.PorDefecto, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            <div class="checkbox">
+
+                                @Html.EditorFor(model => model.PorDefecto)
+
+                                @Html.ValidationMessageFor(model => model.PorDefecto, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </fieldset>}
+            @if (Model.PorDefecto == false)
+            {
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.PorDefecto, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        <div class="checkbox">
+
+                            @Html.EditorFor(model => model.PorDefecto)
+
+                            @Html.ValidationMessageFor(model => model.PorDefecto, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
-            </div>
+            }
+
             <br />
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
