--- a/UI/Views/Login/Index.cshtml
+++ b/UI/Views/Login/Index.cshtml
@@ -34,7 +34,9 @@
 
     <link href="~/Content/login.css" rel="stylesheet">
 </head>
+
 <body class="text-center">
+
 
     <main class="form-signin">
         @using (Html.BeginForm())
@@ -56,7 +58,7 @@
 
             <div class="form-floating">
 
-                @Html.EditorFor(model => model.Mail, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                @Html.EditorFor(model => model.Mail, new { htmlAttributes = new { @class = "form-control", required = "required", @placeholder = "name@example.com" } })
 
             </div>
             <div class="form-floating">
@@ -67,7 +69,7 @@
 
             <div class="checkbox mb-3">
                 <label>
-                    <input type="checkbox" value="remember-me"> Recordarme
+                    <a href="#">Recuperar contraseña</a>
                 </label>
             </div>
 
