--- a/UI/Views/Usuario/Delete.cshtml
+++ b/UI/Views/Usuario/Delete.cshtml
@@ -8,77 +8,87 @@
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Eliminar Usuario</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
-
+            <div class="btn-group me-2">
+                <a>@Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+            </div>
         </div>
     </div>
-    <div class="alert alert-danger" role="alert">
-        Está seguro que desea eliminar el usuario?
+    <div class="container-fluid">
+        <div class="alert alert-danger" role="alert" style="max-width:500px;">
+           ¿Eliminar el usuario @Html.DisplayFor(model => model.Credencial.Mail) ?
+        </div>
+
+        <div>
+
+            <dl class="dl-horizontal">
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Id)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Id)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.FechaCreacion)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.FechaCreacion)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.FechaModificacion)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.FechaModificacion)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Nombre)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Apellido)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Apellido)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Credencial.Mail)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Credencial.Mail)
+                </dd>
+
+            </dl>
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                <br />
+                <div class="form-actions no-color">
+                    <input type="submit" value="Eliminar" class="btn btn-danger" />
+
+                </div>
+
+                
+            }
+        </div>
     </div>
-
-    <div>
-
-        <dl class="dl-horizontal">
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Id)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Id)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.FechaCreacion)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.FechaCreacion)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.FechaModificacion)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.FechaModificacion)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Nombre)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Apellido)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Apellido)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Credencial.Mail)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Credencial.Mail)
-            </dd>
-
-        </dl>
-
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-            <br />
-            <div class="form-actions no-color">
-                <input type="submit" value="Eliminar" class="btn btn-danger" /> 
-               
-            </div>
-
-            <div> @Html.ActionLink("Volver al Listado", "Index")</div>
-        }
-    </div>
-
 </main>
+<script>
+
+    window.onload = function () {
+        document.getElementById('account-collapse').className = 'show';
+        document.getElementById('Usuarios').className = 'btn-activo';
+    };
+</script>
