--- a/UI/Views/Db/Restaurar.cshtml
+++ b/UI/Views/Db/Restaurar.cshtml
@@ -4,7 +4,10 @@
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Restaurar Base de Datos</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
+            <div class="btn-group me-2">
+                <a>@Html.ActionLink("Volver", "Backup", "Db", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
 
+            </div>
         </div>
     </div>
 
