--- a/UI/Views/Permisos/EditarPerfilUsuario.cshtml
+++ b/UI/Views/Permisos/EditarPerfilUsuario.cshtml
@@ -2,16 +2,17 @@
 @model BE.UsuarioBE
 
 @{
-    ViewBag.Title = "Editar Perfil de Usuario";
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["EditarPerfilDeUsuario"].Texto;
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Editar Perfil: @Model.Nombre @Model.Apellido </h1>
+        <h1 class="h2">@Traducciones["EditarPerfilDeUsuario"].Texto: @Model.Nombre @Model.Apellido </h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
-                <a> @Html.ActionLink("Volver", "GrupoPermisos", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Exportar</button>
+                <a> @Html.ActionLink(@Traducciones["Volver"].Texto, "GrupoPermisos", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+
             </div>
 
         </div>
@@ -33,15 +34,15 @@
 
 
                     <div class="input-group" style="max-width: 400px;">
-                        <span class="input-group-text">Grupos</span>
+                        <span class="input-group-text">@Traducciones["Grupos"].Texto</span>
                         @Html.DropDownList("Grupos", new SelectList(ViewBag.Familias, "Id", "Descripcion"), new { @class = "form-select", @Id = "GruposSel" })
-                        <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarGrupo()">Agregar</button>
+                    <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarGrupo()">@Traducciones["Agregar"].Texto</button>
                     </div>
                     <br />
                     <div class="input-group" style="max-width: 400px;">
-                        <span class="input-group-text">Permisos</span>
+                        <span class="input-group-text">@Traducciones["Permisos"].Texto</span>
                         @Html.DropDownList("Grupos", new SelectList(ViewBag.Permisos, "Id", "Descripcion"), new { @class = "form-select", @Id = "PermisoSel" })
-                        <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarPermiso()">Agregar</button>
+                    <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarPermiso()">@Traducciones["Agregar"].Texto</button>
                     </div>
                     <br />
 
@@ -54,7 +55,7 @@
 
                 <div class="col-4">
                     <ul class="list-group" style="max-width: 400px;">
-                        <li class="list-group-item active " aria-current="true">Permisos del Usuario:</li>
+                        <li class="list-group-item active " aria-current="true">@Traducciones["PermisosDelUsuario"].Texto</li>
                         @foreach (var item in Model.Permisos)
                         {
                             if (@item.Permiso == null)
