--- a/UI/Views/Usuario/Delete.cshtml
+++ b/UI/Views/Usuario/Delete.cshtml
@@ -1,21 +1,22 @@
 ﻿@model BE.UsuarioBE
 
 @{
-    ViewBag.Title = "Eliminar Usuario";
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["EliminarUsuario"].Texto;
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Eliminar Usuario</h1>
+        <h1 class="h2">@Traducciones["EliminarUsuario"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
-                <a>@Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+                <a>@Html.ActionLink(Traducciones["Volver"].Texto, "Index", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="alert alert-danger" role="alert" style="max-width:500px;">
-           ¿Eliminar el usuario @Html.DisplayFor(model => model.Credencial.Mail) ?
+           ¿ @Traducciones["ConfirmaEliminarUsuario"].Texto @Html.DisplayFor(model => model.Credencial.Mail) ?
         </div>
 
         <div>
@@ -30,7 +31,7 @@
                     @Html.DisplayFor(model => model.Id)
                 </dd>
                 <dt>
-                    @Html.DisplayNameFor(model => model.FechaCreacion)
+                    @Traducciones["FechaCreacion"].Texto
                 </dt>
 
                 <dd>
@@ -38,7 +39,7 @@
                 </dd>
 
                 <dt>
-                    @Html.DisplayNameFor(model => model.FechaModificacion)
+                    @Traducciones["FechaModificacion"].Texto
                 </dt>
 
                 <dd>
@@ -46,7 +47,7 @@
                 </dd>
 
                 <dt>
-                    @Html.DisplayNameFor(model => model.Nombre)
+                    @Traducciones["Nombre"].Texto
                 </dt>
 
                 <dd>
@@ -54,7 +55,7 @@
                 </dd>
 
                 <dt>
-                    @Html.DisplayNameFor(model => model.Apellido)
+                    @Traducciones["Apellido"].Texto
                 </dt>
 
                 <dd>
@@ -62,7 +63,7 @@
                 </dd>
 
                 <dt>
-                    @Html.DisplayNameFor(model => model.Credencial.Mail)
+                    @Traducciones["Email"].Texto
                 </dt>
 
                 <dd>
@@ -76,7 +77,7 @@
                 @Html.AntiForgeryToken()
                 <br />
                 <div class="form-actions no-color">
-                    <input type="submit" value="Eliminar" class="btn btn-danger" />
+                    <input type="submit" value=" @Traducciones["Eliminar"].Texto" class="btn btn-danger" />
 
                 </div>
 
