--- a/UI/Views/Usuario/Edit.cshtml
+++ b/UI/Views/Usuario/Edit.cshtml
@@ -1,13 +1,14 @@
 ﻿@model BE.UsuarioBE
 @{
-    ViewBag.Title = "Editar Usuario";
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["EditarUsuario"].Texto;
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Editar Usuario</h1>
+        <h1 class="h2">@Traducciones["EditarUsuario"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
-            <a>@Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+            <a>@Html.ActionLink(@Traducciones["Volver"].Texto , "Index", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
         </div>
     </div>
 
@@ -30,7 +31,7 @@
                     </div>
                 </fieldset>
                 <div class="form-group col-sm-4">
-                    @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <label class="control-label col-md-2"> @Traducciones["Nombre"].Texto</label>
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
@@ -38,7 +39,7 @@
                 </div>
 
                 <div class="form-group col-sm-4">
-                    @Html.LabelFor(model => model.Apellido, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <label class="control-label col-md-2"> @Traducciones["Apellido"].Texto</label>
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Apellido, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Apellido, "", new { @class = "text-danger" })
@@ -46,7 +47,7 @@
                 </div>
 
                 <div class="form-group col-sm-4">
-                    @Html.LabelFor(model => model.Credencial.Mail, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <label class="control-label col-md-2"> @Traducciones["Email"].Texto</label>
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Credencial.Mail, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Credencial.Mail, "", new { @class = "text-danger" })
@@ -54,14 +55,14 @@
                 </div>
 
                 <div class="form-group col-sm-4">
-                    @Html.LabelFor(model => model.Idioma, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <label class="control-label col-md-2"> @Traducciones["Idioma"].Texto</label>
                     <div class="col-md-10">
                         @Html.DropDownListFor(model => model.Idioma.Id, new SelectList((System.Collections.IEnumerable)ViewData["Idiomas"], "Id", "Descripcion", @Html.DisplayFor(model => model.Idioma.Id)), new { @class = "form-control" })
                     </div>
                 </div>
 
                 <div class="form-group col-sm-4">
-                    @Html.LabelFor(model => model.Activo, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <label class="control-label col-md-2"> @Traducciones["Activo"].Texto</label>
                     <div class="col-md-10">
                         @Html.CheckBoxFor(model => model.Activo, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Activo, "", new { @class = "text-danger" })
@@ -70,7 +71,7 @@
                 <br />
                 <div class="form-group col-sm-4">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Guardar" class="btn btn-primary" />
+                        <input type="submit" value="@Traducciones["Guardar"].Texto" class="btn btn-primary" />
                     </div>
                 </div>
             </div>
